jbugs-client/src/main/client/src/app/bug-management/bugs-view/bugs-view.component.css
html,
body {
  height: 100%;

}

body {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-align: center;
  -ms-flex-pack: center;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: center;
  justify-content: center;
  padding-top: 40px;
  padding-bottom: 40px;
  background-color: #f5f5f5;
}

td {
  color: white;
}

th {
  color: white;
  cursor: pointer;
}

.pagination {
  display: inline-block;
  width: 20%;
}

.pagination a  {
  color: white;
  padding: 8px 16px;
  text-decoration: none;
  font-size: 24px;
}

/*th.headerSortUp {*/
  /*background: url("../../../assets/desc.png") no-repeat center right;*/
/*}*/

/*th.headerSortDown {*/
  /*background: url("../../../assets/asc.png") no-repeat center right;*/
/*}*/

.custom-pagination {
  display: flex;
  max-width: 300px;
  margin: auto;
}

.custom-pagination>div {
  flex: 1;
  font-size: 18px;
  text-align: center;
  border-bottom: 3px solid transparent;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.custom-pagination>div.current {
  border-color: darkred;
}

a {
  cursor: pointer;
  text-decoration: none;
  transition: none 86ms ease-out;
}

.form-control:focus + .form-control-placeholder,
.form-control:valid + .form-control-placeholder {
  font-size: 100%;
  transform: translate3d(0, -100%, 0);
  opacity: 1;
}

input[type=text] {
  -webkit-transition: all 0.30s ease-in-out;
  -moz-transition: all 0.30s ease-in-out;
  -o-transition: all 0.30s ease-in-out;
  outline: none;
  border: 0;
  outline: 0;
  background: transparent;
  margin-left: 1em;
  margin-bottom: .5em;
  border-bottom: 1px solid black;
  height: 20px;
  font-size: 16px;
  width: 50%;
  color: black;
}

input[type=text]:focus {
  box-shadow:  0 4px 2px -2px  #8b0000;
}

th input[type=text] {
  border-bottom: 1px solid white;
  color: white;
}

.has-float-label .form-control:placeholder-shown:not(:focus)+* {
  font-size: 100%;
  opacity: .5;
  top: .3em;
  font-weight: 400;
  height: 40px;
  margin-top: 30px;
}

i {
  margin: .65em 0 0 .75em;
  font-size: 8px;
  cursor: pointer;
}

/deep/
.toast-info {
  background-color: #BD362F;
}

